--- a/package.json
+++ b/package.json
@@ -4,48 +4,72 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "expo start -c",
-    "dev:web": "expo start -c --web",
     "dev:android": "expo start -c --android",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
-    "web": "expo start -c --web",
     "clean": "rm -rf .expo node_modules",
-    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
+    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.0",
+    "@ai-sdk/gateway": "^1.0.4",
+    "@ai-sdk/react": "^2.0.8",
+    "@gorhom/bottom-sheet": "^5.1.8",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/native": "^7.1.17",
     "@rn-primitives/avatar": "~1.2.0",
+    "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "~1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "expo": "^53.0.9",
-    "expo-linking": "~7.1.5",
-    "expo-navigation-bar": "~4.2.4",
-    "expo-router": "~5.1.3",
-    "expo-splash-screen": "~0.30.8",
+    "@stardazed/streams-text-encoding": "^1.0.2",
+    "@ungap/structured-clone": "^1.3.0",
+    "ai": "^5.0.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "expo": "^53.0.20",
+    "expo-crypto": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-navigation-bar": "~4.2.7",
+    "expo-router": "^5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.7",
-    "lucide-react-native": "^0.511.0",
+    "expo-system-ui": "~5.0.10",
+    "lucide-react-native": "^0.537.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-reanimated": "~3.17.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-web": "~0.20.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "3.3.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.15",
+    "zustand": "^5.0.7",
+    "expo-secure-store": "~14.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@types/react": "~19.0.14",
-    "typescript": "^5.8.3"
+    "@babel/core": "^7.28.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.2",
+    "@types/jest": "^30.0.0",
+    "@types/react": "~19.0.10",
+    "babel-jest": "^30.0.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "~29.7.0",
+    "jest-expo": "^53.0.9",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
